# nvmetools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: conf.py  framework.rst  index.rst  info_commands.rst  information.rst  install_steps.rst  requirements.txt  test_cases.rst  test_commands.rst  test_steps.rst  test_suites.rst  verifications.rst
docs/examples/checknvme/: dashboard.html
docs/examples/readnvme/: nvme.info.json
docs/examples/short_demo/: dashboard.html
docs/examples/viewnvme/: info.html  viewnvme.html
src/nvmetools/: __init__.py
src/nvmetools/apps/: fio.py  nvmecmd.py
src/nvmetools/cases/: __init__.py
src/nvmetools/cases/features/: timestamp.py
src/nvmetools/cases/firmware/: firmware_activate.py  firmware_download.py  firmware_security.py  firmware_update.py
src/nvmetools/cases/info/: admin_commands.py  suite_end_info.py  suite_start_info.py
src/nvmetools/cases/performance/: address_alignment.py  aspm_latency.py  big_file_reads.py  big_file_writes.py  data_compression.py  data_deduplication.py  idle_latency.py  long_burst_lib.py  long_burst_performance.py  long_burst_performance_full.py  nonop_power_times.py  read_buffer.py  short_burst_performance.py  short_burst_performance_full.py
src/nvmetools/cases/selftest/: extended_selftest.py  short_diagnostic.py  short_selftest.py
src/nvmetools/cases/smart/: background_smart.py  smart_data.py
src/nvmetools/cases/stress/: burst_stress.py  high_bandwidth_stress.py  high_iops_stress.py  read_disturb_stress.py  temperature_cycle_stress.py
src/nvmetools/cases/template/: template.py
src/nvmetools/console/: checknvme.py  listnvme.py  readnvme.py  testnvme.py  updatenvme.py  viewnvme.py
src/nvmetools/lib/nvme/: __init__.py  framework.py  pdf_reporter.py  reporter.py
src/nvmetools/reports/: __init__.py
src/nvmetools/reports/firmware/: firmware_activate.py  firmware_security.py  firmware_update.py
src/nvmetools/reports/info/: admin_commands.py  suite_end_info.py  suite_start_info.py
src/nvmetools/reports/performance/: address_alignment.py  aspm_latency.py  big_file_reads.py  big_file_writes.py  (+6 more)
src/nvmetools/requirements/: __init__.py  fio.py  general.py  info.py  performance.py
src/nvmetools/steps/: __init__.py  steps.py
src/nvmetools/suites/: __init__.py  big_demo.py  bvt.py  common.py  demo.py  dev.py  firmware.py  functional.py  health.py  performance.py  selftest.py  short_demo.py  stress.py
src/nvmetools/support/: console.py  conversions.py  custom_reportlab.py  framework.py  info.py  log.py  process.py  report.py
tests/: bvt.py
(+89 files in other folders)
